Bug 45938 - Latest xf86-video-intel from git does not build with xorg server 1.11.903
Summary: Latest xf86-video-intel from git does not build with xorg server 1.11.903
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
: 45939 45940 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-02-11 11:25 UTC by Armin K
Modified: 2012-02-11 13:04 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Armin K 2012-02-11 11:25:25 UTC
make[3]: Entering directory `/sources/driver/xf86-video-intel-2.17.0+git20120209/src/sna'
  CC     blt.lo
In file included from /usr/include/xorg/xf86Crtc.h:27:0,
                 from sna.h:51,
                 from blt.c:32:
/usr/include/xorg/randrstr.h:612:1: warning: redundant redeclaration of 'RRTransformCompute' [-Wredundant-decls]
/usr/include/xorg/rrtransform.h:63:1: note: previous declaration of 'RRTransformCompute' was here
In file included from /usr/include/xorg/xf86Crtc.h:31:0,
                 from sna.h:51,
                 from blt.c:32:
/usr/include/xorg/xf86Modes.h:43:25: warning: redundant redeclaration of 'xf86ModeHSync' [-Wredundant-decls]
/usr/include/xorg/xf86.h:324:25: note: previous declaration of 'xf86ModeHSync' was here
/usr/include/xorg/xf86Modes.h:44:25: warning: redundant redeclaration of 'xf86ModeVRefresh' [-Wredundant-decls]
/usr/include/xorg/xf86.h:325:25: note: previous declaration of 'xf86ModeVRefresh' was here
/usr/include/xorg/xf86Modes.h:53:33: warning: redundant redeclaration of 'xf86DuplicateMode' [-Wredundant-decls]
/usr/include/xorg/xf86.h:328:33: note: previous declaration of 'xf86DuplicateMode' was here
/usr/include/xorg/xf86Modes.h:54:33: warning: redundant redeclaration of 'xf86DuplicateModes' [-Wredundant-decls]
/usr/include/xorg/xf86.h:329:33: note: previous declaration of 'xf86DuplicateModes' was here
/usr/include/xorg/xf86Modes.h:56:23: warning: redundant redeclaration of 'xf86SetModeDefaultName' [-Wredundant-decls]
/usr/include/xorg/xf86.h:326:23: note: previous declaration of 'xf86SetModeDefaultName' was here
/usr/include/xorg/xf86Modes.h:57:23: warning: redundant redeclaration of 'xf86SetModeCrtc' [-Wredundant-decls]
/usr/include/xorg/xf86.h:327:23: note: previous declaration of 'xf86SetModeCrtc' was here
/usr/include/xorg/xf86Modes.h:58:23: warning: redundant redeclaration of 'xf86ModesEqual' [-Wredundant-decls]
/usr/include/xorg/xf86.h:330:23: note: previous declaration of 'xf86ModesEqual' was here
/usr/include/xorg/xf86Modes.h:60:23: warning: redundant redeclaration of 'xf86PrintModeline' [-Wredundant-decls]
/usr/include/xorg/xf86.h:332:23: note: previous declaration of 'xf86PrintModeline' was here
/usr/include/xorg/xf86Modes.h:61:33: warning: redundant redeclaration of 'xf86ModesAdd' [-Wredundant-decls]
/usr/include/xorg/xf86.h:333:33: note: previous declaration of 'xf86ModesAdd' was here
/usr/include/xorg/xf86Modes.h:64:33: warning: redundant redeclaration of 'xf86CVTMode' [-Wredundant-decls]
/usr/include/xorg/xf86.h:177:33: note: previous declaration of 'xf86CVTMode' was here
In file included from sna.h:112:0,
                 from blt.c:32:
kgem.h:48:14: error: field 'list' has incomplete type
kgem.h:49:14: error: field 'request' has incomplete type
kgem.h:50:14: error: field 'vma' has incomplete type
kgem.h:98:14: error: field 'list' has incomplete type
kgem.h:100:14: error: field 'buffers' has incomplete type
kgem.h:124:14: error: field 'flushing' has incomplete type
kgem.h:125:14: error: field 'large' has incomplete type
kgem.h:126:14: error: array type has incomplete element type
kgem.h:127:14: error: array type has incomplete element type
kgem.h:128:14: error: field 'partial' has incomplete type
kgem.h:129:14: error: field 'requests' has incomplete type
kgem.h:133:15: error: array type has incomplete element type
kgem.h: In function 'kgem_bo_map_will_stall':
kgem.h:466:3: warning: implicit declaration of function 'list_is_empty' [-Wimplicit-function-declaration]
kgem.h:466:3: warning: nested extern declaration of 'list_is_empty' [-Wnested-externs]
In file included from sna.h:113:0,
                 from blt.c:32:
sna_damage.h: At top level:
sna_damage.h:20:15: error: field 'list' has incomplete type
In file included from blt.c:32:0:
sna.h: In function 'list_add_tail':
sna.h:118:2: warning: implicit declaration of function '__list_add' [-Wimplicit-function-declaration]
sna.h:118:2: warning: nested extern declaration of '__list_add' [-Wnested-externs]
sna.h:118:22: error: dereferencing pointer to incomplete type
sna.h: At top level:
sna.h:135:14: error: field 'list' has incomplete type
sna.h:136:14: error: field 'inactive' has incomplete type
sna.h:238:14: error: field 'deferred_free' has incomplete type
sna.h:239:14: error: field 'dirty_pixmaps' has incomplete type
sna.h:240:14: error: field 'active_pixmaps' has incomplete type
sna.h:241:14: error: array type has incomplete element type
sna.h:252:15: error: field 'outputs' has incomplete type
sna.h:253:15: error: field 'crtcs' has incomplete type
blt.c: In function 'memcpy_blt':
blt.c:167:14: warning: cast discards '__attribute__((const))' qualifier from pointer target type [-Wcast-qual]
blt.c: In function 'memcpy_xor':
blt.c:242:14: warning: cast discards '__attribute__((const))' qualifier from pointer target type [-Wcast-qual]
make[3]: *** [blt.lo] Error 1
make[3]: Leaving directory `/sources/driver/xf86-video-intel-2.17.0+git20120209/src/sna'
make[2]: *** [all-recursive] Error 1
make[2]: Leaving directory `/sources/driver/xf86-video-intel-2.17.0+git20120209/src'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `/sources/driver/xf86-video-intel-2.17.0+git20120209'
make: *** [all] Error 2

Note: It builds fine with xorg server 1.11.902 ...
Comment 1 Armin K 2012-02-11 11:43:16 UTC
*** Bug 45940 has been marked as a duplicate of this bug. ***
Comment 2 Armin K 2012-02-11 11:43:23 UTC
*** Bug 45939 has been marked as a duplicate of this bug. ***
Comment 3 Armin K 2012-02-11 11:43:55 UTC
Yay, somehow I managed to submit 3 same bug reports. I've marked other two duplicates of this one.
Comment 4 Chris Wilson 2012-02-11 12:06:34 UTC
So they rewrote list.h, fantastic.
Comment 5 Chris Wilson 2012-02-11 13:04:30 UTC
commit 87bed52180cd2abd80ef6b58384f9fd9c9968f7b
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Feb 11 20:54:18 2012 +0000

    Include a local copy of list.h
    
    In 1.11.903, the list.h was renamed to xorg-list.h with a corresponding
    change to all structures. As we carried local fixes to list.h and
    extended functionality, just create our own list.h with a bit of
    handwaving to protect us for the brief existence of xorg/include/list.h.
    
    Reported-by: Armin K <krejzi@email.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=45938
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.